--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMGhrL5mZA2G1uOwnHCB3ug",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Nandhini10102/nasa-neo-tracker/blob/main/Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -3595,7 +3583,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from datetime import datetime         #converting a date string into proper date object"
+        "#converting a date string into proper date object\n",
+        "\n",
+        "from datetime import datetime"
       ],
       "metadata": {
         "id": "M5K571BXwMhg"
@@ -7263,8 +7253,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Inspecting One Asteroid Object\n",
-        "\n",
         "data['near_earth_objects'].keys()"
       ],
       "metadata": {
@@ -11559,14 +11547,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#Fetching More Than One Page of Results\n",
-        "\n",
         "asteroids_data = []\n",
         "target = 10000\n",
         "url = f\"https://api.nasa.gov/neo/rest/v1/feed?start_date=2024-01-01&end_date=2024-01-08&api_key={API_KEY}\"\n",
         "\n",
         "\n",
-        "#Pagination and Data Extraction Loop\n",
         "while len(asteroids_data) < target:\n",
         "  response = requests.get(url)\n",
         "  data = response.json()\n",
@@ -11607,8 +11592,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Trimming and Checking Length\n",
-        "\n",
         "asteroids_data=asteroids_data[:10000]\n",
         "print(len(asteroids_data))"
       ],
